# playmatch

./: .dockerignore  .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.arm64  LICENSE  README.md  recipe.json
.github/workflows/: docker-build.yml  tests.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/abstraction/: cache.rs
api/src/error/: mod.rs
api/src/model/: game_file.rs  igdb.rs  mod.rs
api/src/models/: game_file.rs  mod.rs
api/src/openapi/: mod.rs
api/src/routes/: company.rs  health.rs  identify.rs  igdb.rs  mod.rs  platform.rs
api/src/util/: mod.rs
entity/: Cargo.toml
entity/src/: company.rs  dat_file.rs  dat_file_import.rs  game.rs  game_file.rs  game_release.rs  game_release_id_mapping.rs  lib.rs  platform.rs  prelude.rs  sea_orm_active_enums.rs  signature_group.rs  signature_metadata_mapping.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240816_000001_initial_migration.rs  m20240816_172957_insert_signature_group.rs  m20240817_124421_create_updated_at_function_and_triggers.rs  m20240819_001646_add_automatic_match_type_to_signature_metadata_matching.rs  m20240819_151045_rename_signature_metadata_mapping_provider_name_to_provider.rs  m20240819_151911_add_signature_metadata_mapping_check_for_relation_id.rs  m20240819_194749_add_parent_and_sibling_automatic_match_reason.rs  m20240820_154703_add_signature_group_internal_clone_of_id.rs  m20240823_145438_add_signature_metadata_mapping_unique_indexes.rs  m20240827_153244_fix_signature_metadata_mapping_unique_indexes_to_take_provider_into_account.rs
service/: Cargo.toml
service/src/: lib.rs  query.rs
service/src/cache/: igdb.rs
service/src/company/: mod.rs
service/src/constants/: http.rs  mod.rs
service/src/dat/: mod.rs
service/src/dat/no_intro/: dat.rs  download.rs  mod.rs  model.rs
service/src/dat/redump/: download.rs
service/src/dat/shared/: dat.rs  download.rs  import.rs  mod.rs  model.rs  regex.rs  zip.rs
service/src/db/: abstraction.rs  company.rs  constants.rs  dat_file.rs  dat_file_history.rs  dat_file_import.rs  game.rs  game_file.rs  mod.rs  platform.rs  query.rs  signature_group.rs  signature_metadata_mapping.rs
service/src/fs/: mod.rs
service/src/game/: mod.rs
service/src/http/: abstraction.rs  constants.rs  download.rs  mod.rs
service/src/match/: clone.rs  company.rs  game.rs  mod.rs  model.rs  platform.rs
service/src/match/igdb/: clone.rs  company.rs  game.rs  mod.rs  platform.rs
service/src/metadata/igdb/: constants.rs  mod.rs  model.rs
service/src/model/: mod.rs
service/src/platform/: mod.rs
service/src/util/: mod.rs
service/src/zip/: mod.rs
src/: main.rs
