[package]
name = "playmatch"
version = "0.1.0-dev"
edition = "2021"
build = "build.rs"
authors = ["DevYukine <devyukine@gmx.de>"]
description = "A simple matchmaking service"

[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
api = { path = "api" }
service = { path = "service" }
env_logger = "^0.11"
log = "^0.4"
dotenvy = "^0.15"

[build-dependencies]
built = { version = "^0.7", features = ["chrono", "semver", "git2"] }
