[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
service = { path = "../service" }
actix-web = "^4"
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0.12", features = ["rustls-tls", "json"], default-features = false }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
chrono = "^0.4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "^0.1"
serde_derive = "^1"
anyhow = "^1.0"
thiserror = "^1"
env_logger = "^0.11"
log = "^0.4"
dotenvy = "^0.15"
num_cpus = "^1.16"
actix-governor = "0.5.0"
utoipa = { version = "4.2.3", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
uuid = "^1.10"

[build-dependencies]
built = "^0.7"
