[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
tokio = { version = "^1", features = ["macros", "rt"] }
reqwest = { version = "^0.12", features = ["rustls-tls", "cookies", "stream"], default-features = false }
scraper = "^0.20"
serde = { version = "^1", features = ["derive"] }
serde-xml-rs = "^0.6"
anyhow = "^1"
log = "^0.4"
chrono = "^0.4"
tempdir = "^0.3"
rand = "^0.8"
regex = "^1"
lazy_static = "^1"
futures-util = "^0.3"
zip = "^2.1"
async-recursion = "^1.1"
strum = { version = "^0.26", features = ["derive"] }

[dependencies.sea-orm]
version = "^0.12" # sea-orm version
features = [
	"debug-print",
	"runtime-tokio-rustls",
	"sqlx-postgres"
]
