[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
tokio = { version = "^1", features = ["macros", "rt"] }
reqwest = { version = "^0.12", features = ["rustls-tls", "cookies", "stream"], default-features = false }
serde = { version = "^1", features = ["derive"] }
serde-xml-rs = "^0.6"
serde_repr = "^0.1"
serde_json = "^1"
anyhow = "^1"
log = "^0.4"
chrono = "^0.4"
rand = "^0.8"
regex = "^1"
lazy_static = "^1"
futures-util = "^0.3"
zip = "^2.1"
async-recursion = "^1.1"
strum = { version = "^0.26", features = ["derive"] }
derive_builder = "^0.20"
tower = { version = "^0.5", features = ["util", "limit", "retry"] }
oauth2 = "^4"
utoipa = { version = "^4.2", features = ["actix_extras", "uuid", "chrono", "repr", "debug"] }
cached = { version = "^0.53", features = ["async"] }
md-5 = "^0.10"
num_cpus = "^1.16"
bigdecimal = { version = "^0.4", features = ["serde-json"] }

[dependencies.sea-orm]
version = "~1" # sea-orm version
features = [
	"debug-print",
	"runtime-tokio-rustls",
	"sqlx-postgres"
]
